--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,4 @@
-json{
+{
   "name": "InBetween",
   "short_name": "IB",
   "description": "Uno spazio per osservare ciò che accade quando non accade nulla",
@@ -6,6 +6,13 @@ json{
   "display": "standalone",
   "background_color": "#F3EFE8",
   "theme_color": "#748B97",
-  "orientation": "portrait-primary"
+  "orientation": "portrait-primary",
+  "icons": [
+    {
+      "src": "data:image/svg+xml,%3Csvg viewBox='0 0 512 512' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='512' height='512' fill='%23F3EFE8' rx='80'/%3E%3Crect x='170' y='140' width='40' height='232' fill='%23748B97' rx='20'/%3E%3Crect x='302' y='140' width='40' height='232' fill='%23748B97' rx='20'/%3E%3Ctext x='256' y='440' font-family='Lato' font-size='48' font-weight='700' fill='%23748B97' text-anchor='middle' letter-spacing='8'%3EIB%3C/text%3E%3C/svg%3E",
+      "sizes": "512x512",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
+    }
+  ]
 }
-
